# navi-agent

./: CLAUDE.md  Cargo.toml
src/: executor.rs  lib.rs  multiplexer.rs
src/agent/: agent_impl.rs  builder.rs  compat.rs  control.rs  mod.rs
src/agents/: mod.rs  schedule.rs  schedule_tools.rs  task.rs
src/context/: converter.rs  mod.rs  pipeline.rs  pruner.rs  store.rs
src/core/: error.rs  event.rs  message.rs  mod.rs  state.rs
src/llm/: anthropic.rs  api_client.rs  local_client.rs  local_llm_client.rs  mod.rs  models.rs  openai_chat.rs  openai_responses.rs  parser.rs  serializer.rs  stateful_client.rs  system_prompt.md  think_tag.rs  traits.rs
src/runtime/: llm_client.rs  loop_impl.rs  mod.rs  stream.rs
src/tool/: executor.rs  fs_tools.rs  middleware.rs  mod.rs  registry.rs  traits.rs
